--- a/templates/index.html
+++ b/templates/index.html
@@ -18,10 +18,9 @@
             <div style="padding-left: 100px"><br></div>
             <div>
                 <label for="myInput"></label>
-                <input class="input1" id="myInput"  type="text" name="recipes" placeholder="Search for your ingredients">
+                <input class="input1" id="myInput"  type="text" name="recipes" placeholder="Search for your ingredients. Ex: eggs, cheese, tortilla">
                 <button style="top:200px" class="submitBut" type="submit">Find Recipes</button>
             </div>
         </form>
     </div>
-
 {% endblock %}
